Fixed: color issue in dark mode (#295)

--- a/libreforms_fastapi/app/static/css/style.css
+++ b/libreforms_fastapi/app/static/css/style.css
@@ -144,6 +144,7 @@ body {
     margin: 10px 0;
     border-radius: 5px;
     background-color: #f9f9f9;
+    color: black;
 }
 
 .admonition-title {
